--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: awesome_datetime_picker
+name: gx_datetime_picker
 description: "A customizable date-time picker package supporting all platforms (ios, android, web, desktop, ...)."
 version: 0.1.1
-homepage: https://github.com/inesachour/awesome_datetime_picker
+homepage: https://github.com/inesachour/gx_datetime_picker
 
 environment:
   sdk: '>=3.3.1 <4.0.0'
